[tool.poetry]
name = "ws-model"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
torchvision = "^0.18.1"
torch = "^2.3.1"
opencv-python = "^4.10.0.82"
fastapi = "^0.111.0"
pandas = "^2.2.2"
requests = "^2.32.3"
tqdm = "^4.66.4"
matplotlib = "^3.9.0"
seaborn = "^0.13.2"
scipy = "^1.13.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
